--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ RUNPOD_ENDPOINT_ID=eyijc6vd8jhy24
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_MAX_TIMEOUT=2500
+
+# NextAuth Configuration
+# Generate a secret with: openssl rand -base64 32
+NEXTAUTH_SECRET=your_nextauth_secret_here
+NEXTAUTH_URL=http://localhost:3000
