--- a/.env.docker
+++ b/.env.docker
@@ -1,6 +1,6 @@
 # Docker Production Environment Configuration
 # This file contains non-sensitive configuration values
-# Actual secrets (RUNPOD_API_KEY, etc.) should be in .env (gitignored)
+# Actual secrets (RUNPOD_API_KEY, NEXTAUTH_SECRET, etc.) should be in .env (gitignored)
 
 # Application URL (production domain)
 NEXT_PUBLIC_APP_URL=https://video.labfab.ca
@@ -10,6 +10,9 @@ NEXT_PUBLIC_MAX_TIMEOUT=2500
 
 # Node environment
 NODE_ENV=production
+
+# NextAuth Configuration (production)
+NEXTAUTH_URL=https://video.labfab.ca
 
 # Optional: Email for Let's Encrypt SSL certificates
 ACME_EMAIL=admin@labfab.ca
